--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,21 @@
-name: CI
+name: Swift
+
 on:
- pull_request:
- push:
-   branches:
-     - develop
-     - feature/*
-     - master
+  push:
+    branches:
+      - develop
+      - feature/*
+      - master
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
-    runs-on: macOS-latest
+
+    runs-on: macos-latest
+
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v2
     - name: Build
       run: swift build -v
     - name: Run tests
