remove dryrun for github bump action

--- a/.github/workflows/bump-tag.yaml
+++ b/.github/workflows/bump-tag.yaml
@@ -16,5 +16,5 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.TAG_TOKEN }}
         DEFAULT_BUMP: patch
-        DRY_RUN: true
+        DRY_RUN: false
         WITH_V: false
